fix scrollbar on fullscreen
see #6 and #8 the fix for 6 breaks this now in newer chrome versions. 
Removing it shows all as normal.

--- a/global-overlay-scrollbars.user.css
+++ b/global-overlay-scrollbars.user.css
@@ -72,6 +72,3 @@
 ::-webkit-scrollbar-thumb:hover {
   background: var(--webkit-scrollbar-hover) !important;
 }
-:-webkit-full-screen {
-  overflow: auto !important;
-}
